# HuffmanCoding

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: CI.yml
data/: ToCompress.txt
src/: main.c
src/average/: average.c  average.h
src/huffmanCoding/: task2.c  task2.h  task3.c  task3.h  task4.c  task4.h  task5.c  task5.h  task6.c  task6.h
tests/: .clang-format  CMakeLists.txt  main.cpp
tests/average/: test_average.cpp
tests/huffmanCoding/: test_task2.cpp  test_task3.cpp  test_task4.cpp  test_task5.cpp  test_task6.cpp
